2008-12-02  Omair Majid  <omajid@redhat.com>

	* pulseaudio/src/java/org/classpath/icedtea/pulseaudio/ContextEvent.java:
	Change scope of class and functions from public to package-private.
	* pulseaudio/src/java/org/classpath/icedtea/pulseaudio/ContextListener.java:
	Likewise.
	* pulseaudio/src/java/org/classpath/icedtea/pulseaudio/Debug.java:
	Likewise.
	* pulseaudio/src/java/org/classpath/icedtea/pulseaudio/EventLoop.java:
	Likewise.
	* pulseaudio/src/java/org/classpath/icedtea/pulseaudio/Operation.java:
	Likewise.
	* pulseaudio/src/java/org/classpath/icedtea/pulseaudio/PulseAudioClip.java:
	Change class to be final. Change clip name to 'Audio Clip' and add some
	documentation and annotations.
	* pulseaudio/src/java/org/classpath/icedtea/pulseaudio/PulseAudioDataLine.java:
	Change class scope to package-private. Add annoatations to functions.
	* pulseaudio/src/java/org/classpath/icedtea/pulseaudio/PulseAudioLine.java:
	Add override annotations to functions.
	* pulseaudio/src/java/org/classpath/icedtea/pulseaudio/PulseAudioMixer.java:
	Change class to final.
	(getLine): Check for audio permissions before returning Ports.
	(openRemote): Check for permissions to connect before connecting to a
	remote PulseAudio server.
	(openImpl): New function. Connect to the PulseAudio server.
	(debug): Removed.
	(main): Removed
	(ThreadWriter): Removed.
	* pulseaudio/src/java/org/classpath/icedtea/pulseaudio/PulseAudioMixerInfo.java:
	Change class to final. Bump version.
	* pulseaudio/src/java/org/classpath/icedtea/pulseaudio/PulseAudioMixerProvider.java:
	(PulseAudioMixerProvider): Removed.
	* pulseaudio/src/java/org/classpath/icedtea/pulseaudio/PulseAudioMuteControl.java:
	Change class to final. Formatting fixes.
	* pulseaudio/src/java/org/classpath/icedtea/pulseaudio/PulseAudioPort.java:
	Change class scope to package private. Make constructor package-private. 
	Add override annotations.
	* pulseaudio/src/java/org/classpath/icedtea/pulseaudio/PulseAudioSourceDataLine.java: