@@ -1,3 +1,8 @@
+2008-12-03  Matthias Klose  <doko@ubuntu.com>
+
+	* Makefile.am (stamps/extract.stamp): Only extract HOTSPOT_SRC_ZIP,
+	if WITH_ALT_HSBUILD is defined.
+
 2008-12-02  Omair Majid  <omajid@redhat.com>
 
 	* pulseaudio/src/java/org/classpath/icedtea/pulseaudio/ContextEvent.java:
